<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Piel"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30dp"
        android:textColor="@color/Cafe"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.06" />

    <ImageView
        android:id="@+id/imgPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="464dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
    <!--android:src="@tools:sample/avatars-->

    <Button
        android:id="@+id/btnEjercicio_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:text="@string/btnEjercicio_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:backgroundTint="@color/Cafe_Claro"
        android:textSize="20dp"
        android:shadowRadius="50"
        android:shadowColor="@color/AzulOscuro"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEjercicio_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="468dp"
        android:text="@string/btnEjercicio_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        android:backgroundTint="@color/Cafe_Claro"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:shadowRadius="50"
        android:shadowColor="@color/AzulOscuro"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEjercicio_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="404dp"
        android:text="@string/btnEjercicio_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:backgroundTint="@color/Cafe_Claro"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:shadowRadius="50"
        android:shadowColor="@color/AzulOscuro"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEjercicio_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="276dp"
        android:text="@string/btnEjercicio_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:backgroundTint="@color/Cafe_Claro"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:shadowRadius="50"
        android:shadowColor="@color/AzulOscuro"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>